--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="mimobr">
+    <wb-module deploy-name="Mimobr">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="mimobr"/>
-        <property name="java-output-path" value="/mimobr/bin"/>
+        <property name="java-output-path" value="/Mimobr/bin"/>
+        <property name="context-root" value="Mimobr"/>
     </wb-module>
 </project-modules>
